--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-# Your requirements go here
+cachetools==5.3.3
+DateTime==5.5
+google-auth==2.30.0
+google-auth-oauthlib==1.2.0
+gspread==6.1.2
+oauthlib==3.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pytz==2024.1
+requests-oauthlib==2.0.0
+rsa==4.9
+zope.interface==6.4.post2
